# deepseek_ocr_app

./: .gitignore
backend/: cuda_check.py  pyproject.toml
frontend/: vite.config.js
