[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2",
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "fastapi>=0.104.0",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
    "python-multipart>=0.0.6",
    "safetensors>=0.6.2",
    "tokenizers==0.20.3",
    "torch>=2.0.0",
    "transformers==4.46.3",
    "uvicorn[standard]>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
